Add note for building on windows in README
Signed-off-by: Sharon Wang <sharon-wang-cpsc@outlook.com>